@@ -5,6 +5,7 @@
 Version 1.1rc to be released
 ----------------------------
 - Enh: Added CSS class for links generated by CSort to differentiate sorting directions (Qiang)
+- Enh: Added CComponent::evaluateExpression() (Qiang)
 - Chg: CSort.multiSort is changed to sort by single attribute by default (Qiang)
 - New: Added CDataProvider and CActiveDataProvider (Qiang)
 
